cmake_minimum_required(VERSION 2.8)

project(client)
include_directories(${CMAKE_SOURCE_DIR}/../include)
link_directories(${CMAKE_SOURCE_DIR}/../lib)
set(CAMKE_BUILD_TYPE Debug)
set(EXE_SRC client.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -g")
add_executable(client ${EXE_SRC})
target_link_libraries(client cppsproto)
